alignment fix for social media links

--- a/design/src/app/design/scss/molecules/_footer.scss
+++ b/design/src/app/design/scss/molecules/_footer.scss
@@ -1,52 +1,70 @@
 footer {
-    .footer-copyright{
-        font-size: 0.75rem;    
+    .footer-copyright {
+        font-size: 0.75rem;
+
         @include media-breakpoint-down('sm') {
             text-align: center;
         }
-        ul{
+
+        ul {
             list-style: none;
-            float: right;               
+            float: right;
+
             @include media-breakpoint-down('sm') {
-                float: none;   
+                float: none;
             }
-            li{
+
+            li {
                 display: inline-block;
             }
         }
     }
-    .footer-brand-img{
+
+    .footer-brand-img {
         max-width: 100%;
     }
+
     ul {
         margin: 0;
         list-style: none;
         padding: 0;
-        .nav-link{
+
+        .nav-link {
             padding: 0 0.5rem;
         }
     }
-    .footer-social{      
+
+    .footer-social {
         @include media-breakpoint-down('sm') {
-            text-align: center;  
+            text-align: center;
         }
-        ul{
-                margin-left: auto;
-                margin-right: auto;
-                left: 0;
-                right: 0;
-                display: inline-block;
-            li{
+
+        ul {
+            margin-left: auto;
+            margin-right: auto;
+            left: 0;
+            right: 0;
+            display: inline-block;
+
+            li {
                 display: inline-block;
                 float: left;
-                a{
+
+                a {
                     font-size: 0;
                 }
-                svg{
+
+                svg {
                     width: 2rem;
                     height: 2rem;
                 }
             }
+        }
+    }
+
+    a {
+        @include hover-focus-active {
+            text-decoration: none;
         }
     }
 }
